[gd_scene load_steps=12 format=4 uid="uid://cjf4tsxn2knn7"]

[ext_resource type="Script" uid="uid://m2wyusdtk14y" path="res://scenes/dungeon_room.gd" id="1_hjea5"]
[ext_resource type="Script" uid="uid://d1siouratvecn" path="res://addons/wfc/nodes/generator_2d.gd" id="2_kxohe"]
[ext_resource type="Script" uid="uid://cs23t7qwqxddp" path="res://addons/wfc/problems/2d/preconditions/precondition_2d_remap_by_map.gd" id="3_3goux"]
[ext_resource type="PackedScene" uid="uid://dt2nffs32s7o1" path="res://addons/wfc/examples/helpers/progress_indicator.tscn" id="4_h3ol0"]
[ext_resource type="Script" uid="uid://c3otoiflt3i1q" path="res://addons/wfc/nodes/layered_map_2d.gd" id="5_4ayvl"]
[ext_resource type="Script" uid="uid://3jn4kn5n5qb0" path="res://addons/wfc/problems/2d/mappers/mapper_2d_factory.gd" id="6_fa44h"]
[ext_resource type="TileSet" uid="uid://f5ab14o2k2wy" path="res://addons/wfc/examples/assets/kenney-tiny-dungeon/tile-set-main.tres" id="7_6n44t"]
[ext_resource type="TileSet" uid="uid://drvu3d0pwtf50" path="res://addons/wfc/examples/assets/kenney-tiny-dungeon/tile-set-decorations.tres" id="8_qg48m"]

[sub_resource type="Resource" id="Resource_gfl4d"]
script = ExtResource("3_3goux")
class_map = NodePath("../remap_classes")
remap_empty = true
metadata/_custom_type_script = "uid://cs23t7qwqxddp"

[sub_resource type="Resource" id="Resource_qerb6"]
script = ExtResource("6_fa44h")

[sub_resource type="Resource" id="Resource_s2ixv"]
script = ExtResource("6_fa44h")
metadata/_custom_type_script = "uid://3jn4kn5n5qb0"

[node name="dungeon_room" type="Node2D"]
script = ExtResource("1_hjea5")

[node name="WFC2DGenerator" type="Node" parent="."]
script = ExtResource("2_kxohe")
target = NodePath("../target")
rect = Rect2i(0, 0, 100, 100)
positive_sample = NodePath("../sample")
negative_sample = NodePath("../negative_sample")
precondition = SubResource("Resource_gfl4d")
use_multithreading = false
render_intermediate_results = true
metadata/_custom_type_script = "uid://d1siouratvecn"

[node name="progressIndicator" parent="." node_paths=PackedStringArray("generator") instance=ExtResource("4_h3ol0")]
generator = NodePath("../WFC2DGenerator")

[node name="sample" type="Node" parent="."]
script = ExtResource("5_4ayvl")
mapper_factory = SubResource("Resource_qerb6")

[node name="main" type="TileMapLayer" parent="sample"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAQAAAABAAAAAAAAAAQAAAACAAAAAAAAAAQAAAADAAAAAAAAAAQAAAAEAAAAAAAAAAQAAAAFAAAAAAAAAAQAAAAGAAAAAAAAAAQAAAAHAAAAAAAAAAQAAAAIAAAAAAAAAAQAAAAJAAAAAAAAAAQAAAAKAAAAAAAAAAQAAAALAAAAAAAAAAQAAAAMAAAAAAAAAAQAAAANAAAAAAAAAAQAAAAOAAAAAAAAAAQAAAAPAAAAAAAAAAQAAAAAAAEAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAoAAAAAAAQAAAAAAAsAAAAAAAQAAAABAAEAAAAEAAAAAAABAAcAAAAEAAEAAAAPAAcAAAAFAAEAAAAPAAEAAAAFAAAAAAAPAAIAAAABAAEAAAAPAAMAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAABAAIAAAADAAEAAAABAAMAAAADAAEAAAABAAQAAAADAAEAAAABAAUAAAADAAEAAAABAAYAAAADAAEAAAACAAcAAAACAAAAAAADAAcAAAACAAAAAAAEAAcAAAACAAAAAAAFAAcAAAACAAAAAAAGAAcAAAACAAAAAAAHAAcAAAACAAAAAAAIAAcAAAAGAAAAAAAJAAcAAAACAAAAAAAKAAcAAAACAAAAAAALAAcAAAACAAAAAAAMAAcAAAACAAAAAAANAAcAAAACAAAAAAAOAAcAAAACAAAAAAACAAEAAAACAAIAAAADAAEAAAACAAIAAAAEAAEAAAACAAIAAAAFAAEAAAACAAIAAAAGAAEAAAACAAIAAAAHAAEAAAACAAIAAAAIAAEAAAACAAIAAAAJAAEAAAACAAIAAAAKAAEAAAACAAIAAAALAAEAAAACAAIAAAAMAAEAAAACAAIAAAANAAEAAAACAAIAAAAOAAEAAAACAAIAAAAEAAMAAAABAAAAAAAFAAMAAAACAAAAAAAGAAMAAAACAAAAAAAHAAMAAAADAAAAAAAEAAQAAAABAAEAAAAHAAQAAAADAAEAAAAFAAQAAAACAAEAAAAGAAQAAAACAAEAAAACAAgAAAACAAEAAAADAAgAAAAEAAMAAAAEAAgAAAAEAAIAAAAGAAgAAAAFAAIAAAAIAAgAAAAGAAEAAAAIAAkAAAAGAAIAAAAKAAgAAAAHAAAAAAAKAAkAAAAHAAMAAAAMAAgAAAAIAAEAAAAMAAkAAAAIAAIAAAACAAkAAAADAAQAAAAEAAkAAAADAAQAAAADAAkAAAACAAQAAAAFAAkAAAACAAQAAAAGAAkAAAACAAQAAAAHAAkAAAACAAQAAAABAAkAAAACAAQAAAAJAAkAAAACAAQAAAALAAkAAAACAAQAAAANAAkAAAACAAQAAAAOAAkAAAAIAAMAAAAPAAkAAAACAAQAAAAPAAgAAAALAAQAAAABAAgAAAAJAAQAAAAFAAgAAAAEAAMAAAAHAAgAAAAEAAMAAAAJAAgAAAAEAAMAAAALAAgAAAAEAAMAAAANAAgAAAAEAAMAAAAOAAgAAAAIAAAAAAACAAYAAAAAAAAAAAACAAUAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAABAAIAAAAFAAYAAAACAAIAAAAGAAYAAAACAAIAAAAHAAYAAAADAAIAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAUAAAAAAAIAAAALAAQAAAAAAAEAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAMAAIAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAAQAAAAAAAAAAQAAAAQAAEAAAAAAAQAAAAQAAIAAAAAAAQAAAAQAAMAAAAAAAQAAAAQAAQAAAAAAAQAAAAQAAUAAAAAAAQAAAAQAAYAAAAAAAQAAAAQAAcAAAAAAAQAAAAQAAgAAAAAAAQAAAAQAAkAAAAAAAQAAAAQAAoAAAAAAAQAAAAQAAsAAAAAAAQAAAAQAAwAAAAAAAQAAAAQAA0AAAAAAAQAAAAPAA0AAAAAAAQAAAAOAA0AAAAAAAQAAAANAA0AAAAAAAQAAAAMAA0AAAAAAAQAAAALAA0AAAAAAAQAAAAKAA0AAAAAAAQAAAAJAA0AAAAAAAQAAAAIAA0AAAAAAAQAAAAHAA0AAAAAAAQAAAAGAA0AAAAAAAQAAAAFAA0AAAAAAAQAAAAEAA0AAAAAAAQAAAADAA0AAAAAAAQAAAACAA0AAAAAAAQAAAABAA0AAAAAAAQAAAAAAA0AAAAAAAQAAAAAAAwAAAAAAAQAAAABAAwAAAABAAQAAAACAAwAAAAAAAQAAAADAAwAAAAFAAMAAAAEAAwAAAAAAAQAAAAFAAwAAAAAAAQAAAAGAAwAAAAAAAQAAAAHAAwAAAAAAAQAAAAIAAwAAAAAAAQAAAAJAAwAAAAAAAQAAAAKAAwAAAAAAAQAAAALAAwAAAAAAAQAAAAMAAwAAAAAAAQAAAANAAwAAAAAAAQAAAAOAAwAAAAAAAQAAAAPAAwAAAAAAAQAAAAPAAsAAAAAAAQAAAAOAAsAAAAAAAQAAAANAAsAAAAAAAQAAAAMAAsAAAAAAAQAAAALAAoAAAAAAAQAAAAKAAoAAAAAAAQAAAAJAAoAAAAAAAQAAAAIAAoAAAAAAAQAAAAHAAoAAAAAAAQAAAAGAAoAAAAAAAQAAAAFAAoAAAAAAAQAAAAEAAoAAAAAAAQAAAADAAoAAAAAAAQAAAACAAoAAAAAAAQAAAABAAoAAAAAAAQAAAABAAsAAAAAAAQAAAACAAsAAAABAAQAAAADAAsAAAAAAAQAAAAEAAsAAAAGAAMAAAAFAAsAAAAAAAQAAAAGAAsAAAAAAAQAAAAHAAsAAAAAAAQAAAAIAAsAAAAAAAQAAAAJAAsAAAAAAAQAAAAKAAsAAAAAAAQAAAALAAsAAAAAAAQAAAAMAAoAAAAAAAQAAAANAAoAAAAAAAQAAAAOAAoAAAAAAAQAAAAPAAoAAAAAAAQAAAAQAA4AAAAAAAQAAAAQAA8AAAAAAAQAAAAQABAAAAAAAAQAAAAQABEAAAAAAAQAAAAQABIAAAAAAAQAAAAPABIAAAAAAAQAAAAOABIAAAAAAAQAAAANABIAAAAAAAQAAAAMABIAAAAAAAQAAAALABIAAAAAAAQAAAAKABIAAAAAAAQAAAAJABIAAAAAAAQAAAAIABIAAAAAAAQAAAAIABEAAAAAAAQAAAAIABAAAAAAAAQAAAAIAA8AAAAAAAQAAAAIAA4AAAAAAAQAAAAJAA4AAAAAAAQAAAAKAA4AAAAAAAQAAAALAA4AAAAAAAQAAAAMAA4AAAAAAAQAAAANAA4AAAAAAAQAAAAOAA4AAAAAAAQAAAAPAA4AAAAAAAQAAAAPAA8AAAAAAAQAAAAPABAAAAAAAAQAAAAPABEAAAAAAAQAAAAOABEAAAAAAAQAAAANABEAAAAAAAQAAAAMABEAAAAAAAQAAAALABEAAAAAAAQAAAAKABEAAAAAAAQAAAAJABEAAAAAAAQAAAAJABAAAAAAAAQAAAAJAA8AAAAAAAQAAAAKAA8AAAAAAAQAAAALAA8AAAAAAAQAAAAMAA8AAAAAAAQAAAANAA8AAAAAAAQAAAANABAAAAAAAAQAAAAOABAAAAAAAAQAAAAOAA8AAAAAAAQAAAAMABAAAAAAAAQAAAALABAAAAAAAAQAAAAKABAAAAAAAAQAAAAFAAUAAAACAAQAAAAGAAUAAAACAAQAAAAHAAUAAAADAAEAAAAEAAUAAAABAAEAAAA=")
tile_set = ExtResource("7_6n44t")

[node name="decorations" type="TileMapLayer" parent="sample"]
visible = false
tile_map_data = PackedByteArray("AAAGAAoAAAAFAAUAAAADAAoAAAACAAYAAAAFAAwAAAABAAYAAAABAAoAAAAFAAcAAAAJAAsAAAAHAAUAAAAJAAwAAAAJAAYAAAAJAA0AAAAIAAUAAAAMAAsAAAAHAAYAAAANAAsAAAAKAAUAAAAOAAsAAAAIAAYAAAAMAA0AAAAJAAUAAAAMAA4AAAAJAAYAAAAMAA8AAAAJAAYAAAAMABAAAAAJAAcAAAANABAAAAAKAAUAAAAOABAAAAAKAAUAAAAPABAAAAALAAcAAAAPAA8AAAAJAAYAAAAPAA4AAAAJAAYAAAAPAA0AAAALAAUAAAANAA0AAAAKAAUAAAAOAA0AAAAKAAUAAAAJAA8AAAAKAAYAAAAJABEAAAAGAAUAAAAJAAMAAAACAAYAAAA=")
tile_set = ExtResource("8_qg48m")

[node name="negative_sample" type="Node" parent="."]
script = ExtResource("5_4ayvl")
mapper_factory = SubResource("Resource_qerb6")

[node name="main" type="TileMapLayer" parent="negative_sample"]
visible = false
tile_map_data = PackedByteArray("AAAGAAMAAAAJAAQAAAAFAAMAAAALAAQAAAAFAAUAAAABAAEAAAAGAAUAAAADAAEAAAAFAAkAAAABAAIAAAAGAAkAAAADAAIAAAAFAAgAAAABAAAAAAAGAAgAAAADAAAAAAAMAAcAAAAAAAQAAAANAAcAAAAAAAQAAAARAAcAAAAAAAQAAAARAAgAAAAAAAQAAAAMAAsAAAAAAAQAAAAMAAwAAAAAAAQAAAANAAsAAAAAAAQAAAANAAwAAAAAAAQAAAAPAAsAAAAAAAQAAAAPAAwAAAAAAAQAAAAQAAsAAAAAAAQAAAAQAAwAAAAAAAQAAAA=")
tile_set = ExtResource("7_6n44t")

[node name="decorations" type="TileMapLayer" parent="negative_sample"]
visible = false
tile_map_data = PackedByteArray("AAANAAcAAAAHAAYAAAAMAAcAAAAIAAYAAAARAAgAAAAHAAUAAAARAAcAAAAIAAUAAAAMAAwAAAAHAAUAAAANAAsAAAAIAAUAAAAMAAsAAAAIAAYAAAANAAwAAAAHAAYAAAAQAAwAAAAHAAUAAAAPAAsAAAAIAAUAAAAQAAsAAAAHAAYAAAAPAAwAAAAIAAYAAAA=")
tile_set = ExtResource("8_qg48m")

[node name="remap_classes" type="Node" parent="."]
script = ExtResource("5_4ayvl")
mapper_factory = SubResource("Resource_s2ixv")

[node name="main" type="TileMapLayer" parent="remap_classes"]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAQAAAABAAAAAAABAAQAAAACAAAAAAACAAQAAAADAAAAAAADAAQAAAAEAAAAAAAEAAQAAAAFAAAAAAAFAAQAAAAGAAAAAAAGAAMAAAAHAAAAAAAHAAMAAAAIAAAAAAAIAAMAAAAJAAAAAAAIAAIAAAAKAAAAAAAHAAIAAAALAAAAAAAGAAIAAAAAAAEAAAAAAAIAAAABAAEAAAAAAAEAAAACAAEAAAAAAAAAAAADAAEAAAABAAAAAAAEAAEAAAACAAAAAAAFAAEAAAADAAAAAAAGAAEAAAADAAEAAAAHAAEAAAACAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAIAAAAKAAEAAAACAAIAAAALAAEAAAADAAIAAAAMAAEAAAAEAAAAAAANAAEAAAAFAAAAAAAOAAEAAAAEAAEAAAAPAAEAAAAFAAEAAAAQAAEAAAAEAAIAAAARAAEAAAAFAAIAAAASAAEAAAAEAAMAAAATAAEAAAAGAAAAAAAUAAEAAAAHAAAAAAAVAAEAAAAIAAAAAAAWAAEAAAAHAAEAAAAXAAEAAAAIAAEAAAAYAAEAAAAGAAEAAAAZAAEAAAAJAAQAAAAaAAEAAAAKAAQAAAAbAAEAAAALAAQAAAAMAAAAAAAFAAMAAAANAAAAAAAGAAMAAAAAAAIAAAAAAAQAAAABAAIAAAAAAAQAAAACAAIAAAAAAAQAAAADAAIAAAAAAAQAAAAEAAIAAAAAAAQAAAAFAAIAAAAAAAQAAAAGAAIAAAAAAAQAAAAHAAIAAAAAAAQAAAAIAAIAAAAAAAQAAAAJAAIAAAAAAAQAAAA=")
tile_set = ExtResource("7_6n44t")

[node name="decorations" type="TileMapLayer" parent="remap_classes"]
visible = false
tile_map_data = PackedByteArray("AAAAAAIAAAAHAAUAAAABAAIAAAAIAAUAAAACAAIAAAAHAAYAAAADAAIAAAAIAAYAAAAEAAIAAAAJAAcAAAAFAAIAAAAJAAYAAAAGAAIAAAAJAAUAAAAHAAIAAAAKAAUAAAAIAAIAAAALAAUAAAAJAAIAAAALAAcAAAA=")
tile_set = ExtResource("8_qg48m")

[node name="target" type="Node" parent="."]
script = ExtResource("5_4ayvl")
mapper_factory = SubResource("Resource_qerb6")

[node name="main" type="TileMapLayer" parent="target"]
tile_set = ExtResource("7_6n44t")

[node name="decorations" type="TileMapLayer" parent="target"]
tile_set = ExtResource("8_qg48m")
